# TWOe-viewer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Resources/Logo/: icon.icns
Resources/Test data/: EtH_BMK.wfn  HSTEP8.cpt  HSTEP8.wfn  Li14F12.cpt  Li14F12.wfn  b3lyp.cpt  f2phen.cpt  f2phen.wfn  test2.cpt  w5pyr.cpt  w5pyr.wfn
include/: CameraView.h  DataLoader.h  MolekuleManager.h  TwoeUnits.h  TwoeViewer.h
include/geometry/: cylinder.h  sphere.h
include/widgets/: MainViewWidget.h  ViewWidget.h
src/: CameraView.cpp  DataLoader.cpp  MainViewWidget.cpp  MolekuleManager.cpp  TwoeUnits.cpp  TwoeViewer.cpp  ViewWidget.cpp  main.cpp
